<resources>
    <string name="app_name">MACS</string>
    <string name="title_home">Home</string>
    <string name="title_emotion">Feeling</string>
    <string name="title_event_assessment">Assessment</string>
    <string name="title_faq">FaQ</string>
    <string name="localhost" translatable="false">https://masc-server.herokuapp.com</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="patientButton">Patient</string>
    <string name="caregiverButton">Caregiver</string>
    <string name="specialistButton">Doctor</string>
    <string name="patientLogin">Patient Login</string>
    <string name="caregiverLogin">Caregiver Login</string>
    <string name="specialistLogin">Doctor Login</string>
    <string name="adminLogin">Admin Login</string>
    <string name="title_activity_emotion" translatable="false">emotionActivity</string>
    <string name="emotionIntro">How do you feel now?</string>
    <string name="emotion1" value="counter1">Happy</string>
    <string name="emotion2" value="counter2">Moderate</string>
    <string name="emotion3" value="counter3">Sad</string>
    <string name="submit">Submit</string>
    <string name="intro">Tell us how you feel</string>
    <string name="title_activity_register">Registration</string>
    <string name="registeredUser">Have an account?</string>
    <string name="registeredUser2">Click Here to Login</string>
    <string name="newUser">OR </string>
    <string name="newUser2">Click Here to Register </string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nric">NRIC</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="age">Age</string>
    <string name="contact">Contact No</string>
    <string name="contact_admin">Don\'t have email? Contact admin here</string>
    <string name="contact_admin_title">Contact Admin</string>
    <string name="contact_admin_info">Please fill in your NRIC without \'-\'</string>
    <string-array name="relationship">
        <item>Please Select One</item>
        <item>Parent</item>
        <item>Child</item>
        <item>Spouse</item>
        <item>Other Family Member</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_schedule" translatable="false">scheduleActivity</string>
    <string name="submitButton">Submit</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_activity_register2" translatable="false">Registration</string>
    <string name="caregiverRelation">Relationship with Patient</string>
    <string name="descriptionOfSpinner">What is your Relationship with the Patient? I am their..</string>
    <string name="title_activity_view_event" translatable="false">viewEventActivity</string>
    <string name="title_activity_nav" translatable="false">NavActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="action_change_password">Change Password</string>
    <string name="menu_home">Logout</string>
    <string name="title_activity_view_user_data" translatable="false">viewUserDataActivity</string>
    <string name="dashboard">Dashboard</string>
    <string name="exercise_level_1">Exercise Level 1</string>
    <string name="exercise_level_2">Exercise Level 2</string>
    <string name="exercise_random">random</string>
    <string-array name="exercise_day">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="questionnaire">Physical Activity Questionnaire</string>
    <string name="questionnaire_title">Please rate how you feel at the moment about the physical activity you have been doing. \n(8 questions)</string>
    <string name="questionnaire_desc">(Rate with scale 1 - 7)</string>
    <string name="questionnaire_q1_min">I enjoy it</string>
    <string name="questionnaire_q2_min">I feel bored</string>
    <string name="questionnaire_q3_min">I dislike it</string>
    <string name="questionnaire_q4_min">I find it pleasurable</string>
    <string name="questionnaire_q5_min">I am very absorbed in this activity</string>
    <string name="questionnaire_q6_min">It\'s no fun at all</string>
    <string name="questionnaire_q7_min">It\'s very pleasant</string>
    <string name="questionnaire_q8_min">I felt as though I would rather be doing something else</string>
    <string name="questionnaire_q1_max">I hate it</string>
    <string name="questionnaire_q2_max">I feel interested</string>
    <string name="questionnaire_q3_max">I like it</string>
    <string name="questionnaire_q4_max">I find it unpleasurable</string>
    <string name="questionnaire_q5_max">I am not at all absorbed in this activity</string>
    <string name="questionnaire_q6_max">It\'s a lot of fun</string>
    <string name="questionnaire_q7_max">It\'s very unpleasant</string>
    <string name="questionnaire_q8_max">I felt as though there was nothing else I would rather be doing</string>
    <string name="questionnaire_ans1" translatable="false">1</string>
    <string name="questionnaire_ans2" translatable="false">2</string>
    <string name="questionnaire_ans3" translatable="false">3</string>
    <string name="questionnaire_ans4" translatable="false">4</string>
    <string name="questionnaire_ans5" translatable="false">5</string>
    <string name="questionnaire_ans6" translatable="false">6</string>
    <string name="questionnaire_ans7" translatable="false">7</string>
    <string name="btn_previous">previous</string>
    <string name="btn_next">next</string>
    <string name="btn_submit">submit</string>
    <string name="happy">Happy</string>
    <string name="search">Search</string>
    <string name="empty_chat">You don\'t have any chat history. Start chatting with your friend now!</string>
    <string name="switch_language">Switch Language</string>
    <string name="english" translatable="false">English</string>
    <string name="malay" translatable="false">Bahasa Melayu</string>
    <string name="post_anonymous">Post Anonymous</string>
    <string name="post">Post</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="report_post">Report This Post</string>
    <string name="delete_reply">Delete Reply</string>
    <string name="delete_reply_success">This reply has been reported successfully</string>
    <string name="delete_reply_confirm">Are you sure you want to delete this reply?</string>
    <string name="edit_reply">Edit Reply</string>
    <string name="update_reply_success">Update Reply Success</string>
    <string name="reply">Reply</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="surprised">Surprised</string>
    <string name="disgusted">Disgusted</string>
    <string name="fear">Fear</string>
    <string name="angry">Angry</string>
    <string name="sad">Sad</string>
    <string name="add_new_appointment">Add New Event</string>
    <string name="video_name">video name</string>
    <string name="exercises_time">Exercises Duration</string>
    <string name="start">start</string>
    <string name="pause">Pause</string>
    <string name="next">next</string>
    <string name="reset">reset</string>
    <string name="no_exercise_plan">You haven\'t created your exercise plan yet!</string>
    <string name="customize_exercise_plan">Customize my exercise plan here</string>
    <string name="exercise">Exercise</string>
    <string name="recommended_time">Recommended Duration</string>
    <string name="question">Question\t</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email_temp_pw">Enter Your Email \nto receive a Temporary Password</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="reset_password">Reset Password</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="add_remark">Add Remark</string>
    <string name="view_my_posts_in">View My Posts in..</string>
    <string name="patient_forum">Patient Forum</string>
    <string name="caregiver_forum">Caregiver Forum</string>
    <string name="view_fav_in">View Your Favourite Posts in..</string>
    <string name="my_forum_posts">My Forum Posts</string>
    <string name="my_favourite_posts">My Favourite Posts</string>
    <string name="days_to_exercise">How many days do you want to exercise per week?</string>
    <string name="remind_me_to_exercise">Remind me to exercise</string>
    <string name="feedback_recorded">Your feedback is successfully recorded!</string>
    <string name="update_pw_success">Change Password Success</string>
    <string name="wrong_old_pw">Incorrect Old Password</string>
    <string name="unmatch_new_pw">New Passwords are not same</string>
    <string name="success">Success</string>
    <string name="return_to">Return</string>
    <string name="fail">Failed</string>
    <string name="try_later">Error, Please Try Again Later</string>
    <string name="ok">Ok</string>
    <string name="enter_something">Please enter something in the text box</string>
    <string name="upcoming_app">You have an Upcoming Event</string>
    <string name="delete_app">Delete Event?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_time">Please Select a Time</string>
    <string name="please_select_date">Please Select a Date</string>
    <string name="invalid_datetime">Error, Please enter a valid Date and Time</string>
    <string name="save_exercise">Save Exercise</string>
    <string name="save_exercise_confirm">Do you wish to save this exercise?</string>
    <string name="one_emotion_only">Please select one emotion only</string>
    <string name="at_least_one_emotion">Please select at least one emotion</string>
    <string name="save_exercise_fail">Save exercise fail</string>
    <string name="save_exercise_success">Save exercise success</string>
    <string name="exercise_1_day">You have exercised </string>
    <string name="exercise_2_day"> days this week!</string>
    <string name="exercise_noti">Do you need to exercise today? Check it out!</string>
    <string name="enjoyment">Enjoyment</string>
    <string name="satisfied">Satisfied/Relaxed</string>
    <string name="normal">Normal</string>
    <string name="dissatisfaction">Dissatisfaction/Down</string>
    <string name="post_success">Successfully Posted</string>
    <string name="enter_something_forum">Please Enter Something</string>
    <string name="view_reported_posts">View Reported Posts</string>
    <string name="no_posts">No Posts yet</string>
    <string name="back">Back</string>
    <string name="update_success">Update Post Success</string>
    <string name="delete_post">Delete Post?</string>
    <string name="delete_post_success">Post Deleted</string>
    <string name="btm_nav_emotion">Emotion</string>
    <string name="btm_nav_chat">Chat</string>
    <string name="btm_nav_forum">Forum</string>
    <string name="btm_nav_exercise">Exercise</string>
</resources>