<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_emotion_assessment"
        android:enabled="true"
        android:icon="@drawable/ic_emotion"
        android:title="@string/btm_nav_emotion"/>

    <item
        android:id="@+id/navigation_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/btm_nav_chat"/>

    <item
        android:id="@+id/navigation_forum"
        android:enabled="true"
        android:icon="@drawable/ic_forum"
        android:title="@string/btm_nav_forum"/>

    <item
        android:id="@+id/navigation_exercise"
        android:enabled="true"
        android:icon="@drawable/ic_exercise"
        android:title="@string/btm_nav_exercise"/>



</menu>