<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:textSize="50sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:background="@drawable/button_border"
        android:onClick="onResetPassword"
        />

</LinearLayout>