<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.QuestionnaireActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <include
            layout="@layout/app_bar_nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.drawerlayout.widget.DrawerLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:elevation="10dp"
                android:padding="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="26sp"
                    android:text="@string/questionnaire"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:text="@string/questionnaire_title"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/questionnaire_desc"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="16sp" />

<!--                <LinearLayout-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:orientation="horizontal">-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:text="@string/question"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="#000"-->
<!--                        android:textSize="20sp" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/tvQuestionNum"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:text="1"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="#000"-->
<!--                        android:textSize="20sp" />-->

<!--                </LinearLayout>-->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:padding="1dp"
                        >

                        <RadioButton
                            android:id="@+id/radio_1_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:textSize="20dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/questionnaire_ans1"/>

                        <RadioButton
                            android:id="@+id/radio_1_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/questionnaire_ans2" />

                        <RadioButton
                            android:id="@+id/radio_1_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/questionnaire_ans3" />

                        <RadioButton
                            android:id="@+id/radio_1_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/questionnaire_ans4" />

                        <RadioButton
                            android:id="@+id/radio_1_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/questionnaire_ans5" />

                        <RadioButton
                            android:id="@+id/radio_1_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/questionnaire_ans6" />

                        <RadioButton
                            android:id="@+id/radio_1_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:text="@string/questionnaire_ans7" />

                    </RadioGroup>

                        <TextView
                            android:id="@+id/tvQuestionMin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/radioGroup"
                            android:layout_alignTop="@id/radioGroup"
                            android:layout_marginStart="48dp"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:text="@string/questionnaire_q1_min"
                            android:textColor="#000" />

                        <TextView
                            android:id="@+id/tvQuestionMax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/radioGroup"
                            android:layout_alignBottom="@id/radioGroup"
                            android:layout_marginStart="48dp"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:text="@string/questionnaire_q1_max"
                            android:textColor="#000" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="9">

                    <Button
                        android:id="@+id/button_prev_assessment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dodger_blue"
                        android:layout_margin="8dp"
                        android:layout_weight="3"
                        android:text="@string/btn_previous"/>

                    <Button
                        android:id="@+id/button_submit_assessment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/steel_blue"
                        android:layout_margin="8dp"
                        android:layout_weight="3"
                        android:text="@string/btn_submit"/>

                    <Button
                        android:id="@+id/button_next_assessment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dodger_blue"
                        android:layout_margin="8dp"
                        android:layout_weight="3"
                        android:text="@string/btn_next"/>

                </LinearLayout>

            </LinearLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>