<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".exercise.ExerciseListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <TextView
                android:id="@+id/textview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/exercise_level_1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30dp" />

            <Button
                android:id="@+id/button_random"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:background="@drawable/border"
                android:text="@string/exercise_random"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:text="@string/exercise"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:text="@string/recommended_time"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_exercise_list"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/border"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scrollbars="vertical" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_exercise_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/border"
        android:drawableRight="@drawable/ic_point_to_right"
        android:text="@string/start"
        android:textSize="20dp" />

</RelativeLayout>